variables for dark theme for index

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -26,6 +26,8 @@
   --field-outline-color-on-background: rgba(0,0,0,0.24);
   --field-outline-color-hover-on-background: rgba(0,0,0,0.87);
   --field-outline-color-focus-on-background: var(--mdc-theme-primary);
+  --index-welcome-background-image: url("../src/index/370-mountains-light.jpg");
+  --index-main-carousel-gradient: linear-gradient(180deg, #c6c6c6 0%, #dedede 51%, white 82%);
 }
 html.dark {
   --mdc-theme-background: #242424;
@@ -42,6 +44,8 @@ html.dark {
   --field-outline-color-on-background: rgba(255,255,255,0.44);
   --field-outline-color-hover-on-background: rgba(255,255,255,0.67);
   --field-outline-color-focus-on-background: var(--mdc-theme-primary-lightest);
+  --index-welcome-background-image: url("../src/index/370-mountains-dark.jpg");
+  --index-main-carousel-gradient: linear-gradient(180deg, #373737 0%, #292929 51%, #242424 82%);
 }
 html.dark .top.light {
   --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
