--- a/styles/colors.css
+++ b/styles/colors.css
@@ -4,6 +4,7 @@
   --mdc-theme-primary-light: #4969b7;
   --mdc-theme-primary-lightest: #8096cd;
   --mdc-theme-primary-lightest-most: #aac0eb;
+  --mdc-theme-primary-darker: #0f3663;
   --mdc-theme-primary-dark: #001a59;
   --mdc-theme-secondary: #bc1b2d;
   --mdc-theme-secondary-light: #f55656;
@@ -15,6 +16,8 @@
   --mdc-theme-text-on-primary: #e0e0e0;
   --mdc-theme-text-on-secondary: #e0e0e0;
   --mdc-theme-error: #b00020;
+  --banner-primary: var(--mdc-theme-primary-lighter);
+  --banner-secondary: var(--mdc-theme-secondary);
   --button-text-on-background: var(--mdc-theme-primary);
   --button-ripple-color-on-background: #000000;
   --button-ripple-color-hover-opacity-on-background: 0.08;
@@ -35,6 +38,8 @@ html.dark {
   --mdc-theme-text-on-background: #e0e0e0;
   --mdc-theme-primary_accent_text-on-background: var(--mdc-theme-primary-lightest-most);
   --mdc-theme-error: #e94948;
+  --banner-primary: var(--mdc-theme-primary-darker);
+  --banner-secondary: var(--mdc-theme-secondary-darker);
   --button-text-on-background: var(--mdc-theme-primary-lightest-most);
   --button-ripple-color-on-background: #8096cd;
   --button-ripple-color-hover-opacity-on-background: 0.06;
