--- a/styles/colors.css
+++ b/styles/colors.css
@@ -65,3 +65,77 @@ html.dark .top.light, html.dark .top.mobile-light {
   --topnav-ripple-color: #ffffff;
   --topnav-dropdown-ripple-color: #ffffff;
 }
+.top {
+  --top-height: 60px;
+  --titlebar-heading-width: 286px;
+  --titlebar-heading-font-size: 24px;
+  --titlebar-heading-padding-x: 16px;
+  --titlebar-heading-padding-y: 18px;
+  --titlebar-margin-left: 0;
+  --titlebar-site-margin-top: 0;
+  --menu-icon-display: none;
+  --main-nav-height: 60px;
+  --main-nav-display: inline-flex;
+  --topnav-a-padding-x: 15.3px;
+  --topnav-a-padding-y: 19px;
+  --topnav-dropdown-arrow-padding-y: 14px;
+  --topnav-dropdown-arrow-svg-margin-top: 4px;
+  --topnav-dropdown-a-padding-x: 16px;
+  --topnav-dropdown-a-padding-y: 12px;
+}
+.top.colorful, .top.dark {
+  --titlebar-heading-color: #e0e0e0;
+  --menu-icon-fill: #e0e0e0;
+  --topnav-text-color: #e0e0e0;
+  --topnav-dropdown-text-color: #222222;
+  --topnav-currentpage-color: #e0e0e0;
+  --topnav-dropdown-bg-color: #f7f7f7;
+  --topnav-ripple-color: #ffffff;
+  --topnav-dropdown-ripple-color: #003f87;
+}
+.top.colorful {
+  --topnav-bg-color: var(--banner-primary);
+}
+.top.dark {
+  --topnav-bg-color: #212121;
+}
+.top.light {
+  --titlebar-heading-color: #003f87;
+  --menu-icon-fill: #003f87;
+  --topnav-bg-color: #ffffff;
+  --topnav-text-color: #222222;
+  --topnav-dropdown-text-color: #222222;
+  --topnav-currentpage-color: #003f87;
+  --topnav-dropdown-bg-color: #f7f7f7;
+  --topnav-ripple-color: #003f87;
+  --topnav-dropdown-ripple-color: #003f87;
+}
+@media (max-width: 600px) { /*duplicated from above*/
+  .top.mobile-colorful, .top.mobile-dark {
+    --titlebar-heading-color: #e0e0e0;
+    --menu-icon-fill: #e0e0e0;
+    --topnav-text-color: #e0e0e0;
+    --topnav-dropdown-text-color: #222222;
+    --topnav-currentpage-color: #e0e0e0;
+    --topnav-dropdown-bg-color: #f7f7f7;
+    --topnav-ripple-color: #ffffff;
+    --topnav-dropdown-ripple-color: #003f87;
+  }
+  .top.mobile-colorful {
+    --topnav-bg-color: var(--banner-primary);
+  }
+  .top.mobile-dark {
+    --topnav-bg-color: #212121;
+  }
+  .top.mobile-light {
+    --titlebar-heading-color: #003f87;
+    --menu-icon-fill: #003f87;
+    --topnav-bg-color: #ffffff;
+    --topnav-text-color: #222222;
+    --topnav-dropdown-text-color: #222222;
+    --topnav-currentpage-color: #003f87;
+    --topnav-dropdown-bg-color: #f7f7f7;
+    --topnav-ripple-color: #003f87;
+    --topnav-dropdown-ripple-color: #003f87;
+  }
+}
