add communications page to navbar and sidenav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
   				<li> <a class='collapsible-header ripple-light-bg'>Members</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='ripple-light-bg' href='email-newsletters_encrypted.html'>Weekly Newsletters</a></li>
+  							<li><a class='ripple-light-bg' href='communication_encrypted.html'>Communication</a></li>
   							<li><a class='ripple-light-bg' href='calendar_encrypted.html'>Calendar</a></li>
   							<li><a class='ripple-light-bg' href='mb-counselors_encrypted.html'>Merit Badge Counselors</a></li>
   							<li><a class='ripple-light-bg' href='troop-roster_encrypted.html'>Troop Roster</a></li>
@@ -178,7 +178,7 @@
     				</li>
     				<li class='dropdown' id='members'><a href='javascript:void(0)' class='ripple-light-bg'>Members</a>
     					<dropdown class='dropdown-content'>
-                <a href='email-newsletters_encrypted.html' class='ripple-light-bg'>Weekly Newsletters</a>
+                <a href='communication_encrypted.html' class='ripple-light-bg'>Communication</a>
                 <a href='calendar_encrypted.html' class='ripple-light-bg'>Calendar</a>
                 <a href='mb-counselors_encrypted.html' class='ripple-light-bg'>Merit Badge Counselors</a>
                 <a href='troop-roster_encrypted.html' class='ripple-light-bg'>Troop Roster</a>
@@ -202,7 +202,7 @@
                 <a href='payments.html' id='drop-payments' class='ripple-light-bg'>Payments</a>
                 <a href='http://store.troop370atlanta.org' target='blank' id='drop-pinestraw' class='ripple-light-bg'>Pine Straw</a>
     						<dropdown class='dropdown-content' id='drop-members'>
-                  <a href='email-newsletters_encrypted.html' class='ripple-light-bg'>Weekly Newsletters</a>
+                  <a href='communication_encrypted.html' class='ripple-light-bg'>Communication</a>
                   <a href='calendar_encrypted.html' class='ripple-light-bg'>Calendar</a>
                   <a href='mb-counselors_encrypted.html' class='ripple-light-bg'>Merit Badge Counselors</a>
                   <a href='troop-roster_encrypted.html' class='ripple-light-bg'>Troop Roster</a>
