--- a/styles/staticrypt.css
+++ b/styles/staticrypt.css
@@ -1,10 +1,9 @@
 @import "../styles/fonts.css";
-:root {
-  --scout-blue: #003f87;
-}
+@import "../styles/colors.css";
 html  {
-  background: #eeeeee;
+  background: var(--signin-background);
   height: 100%;
+  color: var(--signin-text-color);
 }
 body {
   margin: 0;
@@ -17,7 +16,7 @@ body {
   max-width: 360px;
   max-height: 380px;
   min-height: 380px;
-  background: #ffffff;
+  background: var(--mdc-theme-background);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   padding: 45px;
   margin: auto;
@@ -33,7 +32,7 @@ p.logo {
   font-weight: 600;
   font-size: 1.5em;
   line-height: 1em;
-  color: var(--scout-blue);
+  color: var(--signin-accent-color);
   margin: 0;
   text-align: center;
 }
@@ -66,10 +65,14 @@ a.contact {
   font-family: "IBM Plex Sans", sans-serif !important;
   font-weight: 700 !important;
   margin: -8px 0 0 -8px;
+  color: var(--signin-accent-color) !important;
+}
+a.contact::before, a.contact::after {
+  background-color: var(--signin-accent-color);
 }
 .password-question {
   font-family: "Roboto", sans-serif;
-  color: #333;
+  color: var(--signin-light-text-color);
   font-size: 14px;
   line-height: 1.4286;
   margin-top: 20px;
