Use local flickity files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
     {% if page.title == 'Home' %}
     <meta name="Description" content="Troop 370 - Atlanta, GA | Scouts BSA Troop in Buckhead/Brookhaven/Sandy Springs area | Sponsored by St. James United Methodist Church">
     <meta name="msvalidate.01" content="0E12A7A6688D1B7250808B7C0C0BC3F5" />
-    <link rel="stylesheet" href="https://npmcdn.com/flickity@2/dist/flickity.css" media="screen">
-    <script src="https://npmcdn.com/flickity@2/dist/flickity.pkgd.js"></script>
+    <link rel="stylesheet" href="resources/flickity/flickity.css" media="screen">
+    <script src="resources/flickity/flickity.pkgd.js"></script>
     <link rel="stylesheet" href="styles/index.css" media="screen">
     {% else %} {% endif %}
   </head>
