make buttons with no outline or background appear left aligned with text

--- a/styles/components-v2.css
+++ b/styles/components-v2.css
@@ -206,6 +206,9 @@ div.buttonrow {
 a {
   color: inherit;
 }
+a.mdc-button.button-adjust {
+  margin-left: -8px;
+}
 p, ol, ul {
   color: var(--mdc-theme-text-on-background)
 }
