--- a/styles/colors.css
+++ b/styles/colors.css
@@ -127,8 +127,9 @@
     --topnav-dropdown-ripple-color: #ffffff;
   }
 }
-/*@media (prefers-color-scheme: dark) {*/
-  html.dark {
+
+@media (prefers-color-scheme: dark) {
+  :root {
     --mdc-theme-background: #242424;
     --mdc-theme-text-on-background: #e0e0e0;
     --mdc-theme-disabled-text-on-background: #e0e0e08a;
@@ -159,21 +160,21 @@
     --signin-background: #202020;
     --signin-light-text-color: #e0e0e08a;
   }
-  html.dark .top.light {
+  .top.light {
     --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
     --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
     --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
   }
-  html.dark .top {
+  .top {
     --topnav-dropdown-text-color: var(--mdc-theme-text-on-background);
     --topnav-dropdown-bg-color: #303030;
     --topnav-dropdown-ripple-color: #ffffff;
   }
   @media (max-width: 600px) {
-    html.dark .top.mobile-light {
+    top.mobile-light {
       --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
       --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
       --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
     }
   }
-/*}*/
+}
