--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -31,6 +31,7 @@ $mdc-theme-on-primary: if(mdc-theme-contrast-tone($mdc-theme-primary) == "dark",
 $mdc-theme-secondary: #bc1b2d;
 $mdc-theme-on-secondary: if(mdc-theme-contrast-tone($mdc-theme-secondary) == "dark", #000, #fff) !default;
 $mdc-theme-background: #ffffff;
+$mdc-theme-on-background: #000000;
 $mdc-theme-surface: #fff !default;
 $mdc-theme-on-surface: if(mdc-theme-contrast-tone($mdc-theme-surface) == "dark", #000, #fff) !default;
 $mdc-theme-error: #b00020 !default;
