--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,8 @@
 //@import "fonts";
 @import "content-strip";
 @import "topnav";
+@import "sidenav";
+@import "collapsible";
 
 html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
