--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -50,3 +50,23 @@ $content-strip-padding-y-extra: 80px;
 $content-strip-padding-x: 10px;
 $content-strip-item-margin-y: 5px;
 $content-strip-item-margin-x: 0;
+
+$sidenav-width: 300px;
+$sidenav-bg-color: $mdc-theme-surface;
+$sidenav-line-height: 48px;
+$sidenav-font-color: #000;
+$sidenav-font-size: 14px;
+$sidenav-font-family: $mdc-typography-font-family;
+$sidenav-item-height: 48px;
+$sidenav-padding: 16px;
+$sidenav-divider-color: #e0e0e0;
+$primary-color: navy;
+$sidenav-header-background-color: $mdc-theme-background;
+$sidenav-header-bugler-fill-color: $mdc-theme-primary;
+$sidenav-header-text-color: $mdc-theme-primary;
+$sidenav-header-social-icons-fill-color: $mdc-theme-primary;
+
+$collapsible-border-color: transparent;
+$collapsible-header-color: transparent;
+$element-top-margin: 0;
+$element-bottom-margin: 0;
